--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../style/style.css">
     <link rel="icon" href="../img/icon.png">
     <title>Carrito - Froggy Store</title>
 </head>
@@ -30,7 +30,7 @@
     </header>
     <!-- NAV -->
     <nav id="nav" class="navbar navbar-expand-md navbar-light">
-        <a class="navbar-brand d-md-none" href="index.html"><img class="logoMobile" src="../img/logoMobileTablet.png"></a>
+        <a class="navbar-brand d-md-none" href="../index.html"><img class="logoMobile" src="../img/logoMobileTablet.png"></a>
         <form class="d-md-none">
             <input class="buscadorMobile" type="text" placeholder="Buscar...">
         </form>
@@ -40,13 +40,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mx-auto">
                 <li class=" nav-item">
-                    <a class="nav-link active" href="../index.html">Inicio</a>
+                    <a class="nav-link" href="../index.html">Inicio</a>
                 </li>
                 <li class=" nav-item">
-                    <a class="nav-link" href="productos.html">Productos</a>
+                    <a class="nav-link active" href="productos.html">Productos</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="servicios.html">Servicios</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="preguntas_frecuentes.html">FAQ</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contacto.html">Contacto</a>
