--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../style/style.css">
     <link rel="icon" href="../img/icon.png">
     <title>Iniciar sesión - Froggy Store</title>
 </head>
-<body class="contenedor">
+<body>
     <!-- HEADER -->
     <header id="header">
 	    <div class="d-none d-md-flex justify-content-center align-items-center">
@@ -29,15 +29,18 @@
         </div>
     </header>
     <!-- NAV -->
-    <nav id="nav" class="navbar navbar-expand-md navbar-light">
-        <a class="navbar-brand d-md-none" href="index.html"><img class="logoMobile" src="../img/logoMobileTablet.png"></a>
+    <nav id="nav" class="navbar-expand-md navbar-light">
+        <div class="logoBuscadorMobile">
+            <a class="navbar-brand d-md-none" href="../index.html"><img class="logoMobile" src="../img/logoMobileTablet.png"></a>
+            <input type="text" placeholder="Buscar..." class="d-md-none">
+        </div>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mx-auto">
                 <li class=" nav-item">
-                    <a class="nav-link active" href="../index.html">Inicio</a>
+                    <a class="nav-link" href="../index.html">Inicio</a>
                 </li>
                 <li class=" nav-item">
                     <a class="nav-link" href="productos.html">Productos</a>
@@ -46,54 +49,65 @@
                     <a class="nav-link" href="servicios.html">Servicios</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="contacto.html">Contacto</a>
+                    <a class="nav-link" href="preguntas_frecuentes.html">FAQ</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="contacto.html">Contacto</a>
                 </li>
             </ul>
         </div>
     </nav>
     <!-- MAIN -->
-    <main id="main">
+    <main id="main" class="contenedor--2columnas">
         <h1>Contacto</h1>
         <!-- INFO CONTACTO -->
-        <div>
-            <h4>Información de contacto</h4>
-            <ul>
-				<li><a href="https://api.whatsapp.com/send?phone=#" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16" alt="Whatsapp">
-                    <path d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z"/></svg>
-                    Whatsapp: +54 341 1234567</a></li>
-				<li><a href="#" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-fill" viewBox="0 0 16 16">
-                    <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555ZM0 4.697v7.104l5.803-3.558L0 4.697ZM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757Zm3.436-.586L16 11.801V4.697l-5.803 3.546Z"/></svg>
-                    Email: froggystore@gmail.com</a></li>
-				<li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16" alt="Dirección">
-                    <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/></svg>
-                    Dirección: Bv. Oroño 123, Rosario
-                </li>
-			</ul>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3348.681547567435!2d-60.65248604949048!3d-32.93301098083163!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b7ab3635f668a5%3A0xb4a7150b5cfb740e!2sBv.%20Oro%C3%B1o%20123%2C%20S2000DRB%20Rosario%2C%20Santa%20Fe!5e0!3m2!1ses!2sar!4v1649079663181!5m2!1ses!2sar" width="500" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
+        <section>
+            <article>
+                <h4>Información de contacto</h4>
+                <ul>
+                    <li><a href="https://api.whatsapp.com/send?phone=#" target="_blank">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16" alt="Whatsapp">
+                        <path d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z"/></svg>
+                        Whatsapp: +54 341 1234567</a>
+                    </li>
+                    <li><a href="#" target="_blank">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-fill" viewBox="0 0 16 16">
+                        <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555ZM0 4.697v7.104l5.803-3.558L0 4.697ZM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757Zm3.436-.586L16 11.801V4.697l-5.803 3.546Z"/></svg>
+                        Email: froggystore@gmail.com</a>
+                    </li>
+                    <li>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16" alt="Dirección">
+                        <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/></svg>
+                        Dirección: Bv. Oroño 123, Rosario
+                    </li>
+                </ul>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3348.681547567435!2d-60.65248604949048!3d-32.93301098083163!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b7ab3635f668a5%3A0xb4a7150b5cfb740e!2sBv.%20Oro%C3%B1o%20123%2C%20S2000DRB%20Rosario%2C%20Santa%20Fe!5e0!3m2!1ses!2sar!4v1649079663181!5m2!1ses!2sar" width="500" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </article>
+        </section>
         <!-- FORMULARIO -->
-        <div>
-            <h4>Dejanos tu pedido y/o consulta :)</h4>
-            <form action="#" method="post">
-                <label for="nombre">Nombre</label>
-                <br>
-                <input type="name" id="nombre">
-                <br>
-                <label for="email">Email</label>
-                <br>
-                <input type="email" id="email">
-                <br>
-                <label for="asunto">Asunto de su contulta</label>
-                <br>
-                <input type="text" id="asunto">
-                <br>
-                <label for="mensaje">Tu mensaje...</label>
-                <br>
-                <textarea name="mensaje" id="mensaje" cols="35" rows="4"></textarea>
-                <br>
-                <input type="submit">
-            </form>
-        </div>
+        <section>
+            <article><h4>Dejanos tu pedido y/o consulta :)</h4>
+                <form action="#" method="post">
+                    <label for="nombre">Nombre</label>
+                    <br>
+                    <input type="name" id="nombre">
+                    <br>
+                    <label for="email">Email</label>
+                    <br>
+                    <input type="email" id="email">
+                    <br>
+                    <label for="asunto">Asunto de su contulta</label>
+                    <br>
+                    <input type="text" id="asunto">
+                    <br>
+                    <label for="mensaje">Tu mensaje...</label>
+                    <br>
+                    <textarea name="mensaje" id="mensaje" cols="35" rows="4"></textarea>
+                    <br>
+                    <input type="submit">
+                </form>
+            </article>
+        </section>
     </main>
     <!-- FOOTER -->
     <footer id="footer">
