--- a/pages/preguntas_frecuentes.html
+++ b/pages/preguntas_frecuentes.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../style/style.css">
     <link rel="icon" href="../img/icon.png">
     <title>Preguntas frecuentes - Froggy Store</title>
 </head>
-<body class="contenedor">
+<body>
     <!-- HEADER -->
     <header id="header">
 	    <div class="d-none d-md-flex justify-content-center align-items-center">
@@ -29,24 +29,27 @@
         </div>
     </header>
     <!-- NAV -->
-    <nav id="nav" class="navbar navbar-expand-md navbar-light">
-        <a class="navbar-brand d-md-none" href="index.html"><img class="logoMobile" src="../img/logoMobileTablet.png"></a>
-        <form class="d-md-none">
-            <input class="buscadorMobile" type="text" placeholder="Buscar...">
-        </form>
+    <nav id="nav" class="navbar-expand-md navbar-light">
+        <div class="logoBuscadorMobile">
+            <a class="navbar-brand d-md-none" href="../index.html"><img class="logoMobile" src="../img/logoMobileTablet.png"></a>
+            <input type="text" placeholder="Buscar..." class="d-md-none">
+        </div>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mx-auto">
                 <li class=" nav-item">
-                    <a class="nav-link active" href="../index.html">Inicio</a>
+                    <a class="nav-link" href="../index.html">Inicio</a>
                 </li>
                 <li class=" nav-item">
                     <a class="nav-link" href="productos.html">Productos</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="servicios.html">Servicios</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="preguntas_frecuentes.html">FAQ</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contacto.html">Contacto</a>
@@ -58,17 +61,31 @@
     <main id="main">
         <h1>Preguntas frecuentes</h1>
         <!-- FORMULARIO -->
-        <div>
-            <h4>Tabla de talles</h4>
-            <img src="../img/talles.jpg" alt="">
-            <h4>Métodos de pago</h4>
-            <p>Aceptamos pagos con: Pago Facil, Rapipago, MercadoPago, tarjetas de débito y crédito y transferencia bancaria.</p>
-            <h4>Envíos</h4>
-            <p>Hacemos envios a todo el país a través de OCA.
-                También pueden retirar los pedidos en nuestro local de Rosario: Bv Oroño 123.</p>
-            <h4>Devoluciones</h4>
-            <p>Aceptamos devoluciones dentro de los primeros 4 días de recibida la compra. Luego de ese periodo, no aceptamos devoluciones.</p>
-        </div>
+        <section>
+            <article>
+                <h4>Froggy Store</h4>
+                <p>Somos un emprendimiento de productos sublimados con nuestros dibujos originales! Dibujamos y sublimamos productos con personajes de anime, comics, series y peliculas, cartoons, artistas musicales y todo lo relacionado a lo geek. Si te gustaron nuestros dibujos y querés uno personalizado, por favor leé la sección <a href="servicios">Personalizados</a>.</p>
+            </article>
+            
+            <article>
+                <h4>Métodos de pago</h4>
+                <p>Aceptamos pagos con: Pago Facil, Rapipago, MercadoPago, tarjetas de débito y crédito y transferencia bancaria.</p>
+            </article>
+            <article>
+                <h4>Envíos</h4>
+                <p>Hacemos envios a todo el país a través de OCA. También pueden retirar los pedidos en nuestro local de Rosario: Bv Oroño 123.</p>
+            </article>
+            <article>
+                <h4>Devoluciones</h4>
+                <p>Aceptamos devoluciones dentro de los primeros 4 días de recibida la compra. Luego de ese periodo, no aceptamos devoluciones.</p>
+            </article>
+        </section>
+        <section>
+            <article>
+                <h4>Tabla de talles</h4>
+                <img src="../img/talles.jpg" alt="Tabla de talles">
+            </article>
+        </section>
     </main>
     <!-- FOOTER -->
     <footer id="footer">
