centrado de main y flex-start footer

--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
     </header>
     <!-- NAV -->
     <nav id="nav" class="navbar-expand-md navbar-light">
-        <div class="logoBuscadorMobile">
+        <div class="navMobile">
             <a class="navbar-brand d-md-none" href="index.html"><img class="logoMobile" src="img/logoMobileTablet.png"></a>
             <input type="text" placeholder="Buscar..." class="d-md-none">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
         </div>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mx-auto">
                 <li class=" nav-item">
