--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -11,7 +11,7 @@
     <meta name="description" content="Froggy Store | Ofrecemos servicios de venta al por mayor y productos personalizados; dibujamos y sublimamos tu idea!">
     <meta name="keywords" content="tienda, emprendimiento, sublimaciones, cute, venta al por mayor, productos personalizados">
 </head>
-<body class="contenedor">
+<body>
     <!-- HEADER -->
     <header id="header">
 	    <div class="d-none d-md-flex justify-content-center align-items-center">
@@ -32,13 +32,13 @@
     </header>
     <!-- NAV -->
     <nav id="nav" class="navbar-expand-md navbar-light">
-        <div class="logoBuscadorMobile">
+        <div class="navMobile">
             <a class="navbar-brand d-md-none" href="../index.html"><img class="logoMobile" src="../img/logoMobileTablet.png"></a>
             <input type="text" placeholder="Buscar..." class="d-md-none">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
         </div>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mx-auto">
                 <li class=" nav-item">
@@ -70,28 +70,30 @@
                 <h4>-30% descuento</h4>
                 <p>Ofrecemos la venta de productos al por mayor. Pueden ser productos de nuestro catálogo o productos personalizados!</p>
             </article>
-        </section>
-        <section>
             <article>
-                <h2>Personalizados</h2>
-                <h4>+20% recargo</h4>
-                <p>Ofrecemos el servicio de productos personalizados! Son remeras, tazas y/o llaveros con <b>un dibujo hecho para vos!</b> Tendrá el estilo de Froggy Store. Podés pedirnos un dibujo de lo que quieras:</p>
-                <ul>
-                    <li>Una o más personas</li>
-                    <li>Tu mascota</li>
-                    <li>Tu personaje favorito</li>
-                    <li>Tu planta favorita</li>
-                    <li>Un paisaje simple</li>
-                </ul>
-                <b>NO hacemos ilustraciones con contenido inapropiado ( +18 )</b>
-                <h3>Proceso del pedido personalizado</h3>
-                <ol>
-                    <li><b>Consultanos por mensaje:</b> escribinos un correo o llená el <a href="contacto.html">formulario</a> con tu idea. Nosotros nos comunicaremos con vos para avisarte si es posible hacer tu idea! Tené en cuenta que si necesitas tu pedido para una fecha en especial, pedir con un anticipado de 1 mes para más seguridad.</li>
-                    <li><b>Aceptamos tu pedido:</b> cuando aceptemos tu pedido, debés pagar el 50% antes de que comencemos a trabajar. Para proceder con el pedido, debés enviarnos fotos lo que querés que dibujemos y en qué producto lo querés (y decirnos el talle, en caso de pedir remeras).</li>
-                    <li><b>Vista de boceto:</b> luego de un tiempo (hasta 2 semanas después), te enviaremos bocetos con tu idea; tendrás decirnos si está bien o si querés hacer correcciones!</li>
-                    <li><b>Vista de dibujo final:</b> después de recibir tus correciones del boceto, te enviaremos el dibujo terminado y una vista previa de cómo quedaria en tu producto.</li>
-                    <li><b>Producto listo:</b> tu producto estará listo con tu dibujo hecho a medida para vos! En este punto, tendrás que pagarnos el 50% restante.</li>
-                </ol> 
+                <div>
+                    <h2>Personalizados</h2>
+                    <h4>+20% recargo</h4>
+                    <p>Ofrecemos el servicio de productos personalizados! Son remeras, tazas y/o llaveros con <b>un dibujo hecho para vos!</b> Tendrá el estilo de Froggy Store. Podés pedirnos un dibujo de lo que quieras:</p>
+                    <ul>
+                        <li>Una o más personas</li>
+                        <li>Tu mascota</li>
+                        <li>Tu personaje favorito</li>
+                        <li>Tu planta favorita</li>
+                        <li>Un paisaje simple</li>
+                    </ul>
+                    <b>NO hacemos ilustraciones con contenido inapropiado ( +18 )</b>
+                </div>
+                <div>
+                    <h3>Proceso del pedido personalizado</h3>
+                    <ol>
+                        <li><b>Consultanos por mensaje:</b> escribinos un correo o llená el <a href="contacto.html">formulario</a> con tu idea. Nosotros nos comunicaremos con vos para avisarte si es posible hacer tu idea! Tené en cuenta que si necesitas tu pedido para una fecha en especial, pedir con un anticipado de 1 mes para más seguridad.</li>
+                        <li><b>Aceptamos tu pedido:</b> cuando aceptemos tu pedido, debés pagar el 50% antes de que comencemos a trabajar. Para proceder con el pedido, debés enviarnos fotos lo que querés que dibujemos y en qué producto lo querés (y decirnos el talle, en caso de pedir remeras).</li>
+                        <li><b>Vista de boceto:</b> luego de un tiempo (hasta 2 semanas después), te enviaremos bocetos con tu idea; tendrás decirnos si está bien o si querés hacer correcciones!</li>
+                        <li><b>Vista de dibujo final:</b> después de recibir tus correciones del boceto, te enviaremos el dibujo terminado y una vista previa de cómo quedaria en tu producto.</li>
+                        <li><b>Producto listo:</b> tu producto estará listo con tu dibujo hecho a medida para vos! En este punto, tendrás que pagarnos el 50% restante.</li>
+                    </ol> 
+                </div>
             </article>
         </section>
     </main>
