3era entrega proyecto

--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -11,9 +11,9 @@
     <meta name="description" content="Froggy Store | Carrito de compras; mirá lo que te interesa comprar.">
     <meta name="keywords" content="tienda, store, emprendimiento, Rosario, dibujo, ilustraciones, cute, tierno, colorido, anime, comics, gaming, videojuegos">
 </head>
-<body class="contenedor">
+<body>
     <!-- HEADER -->
-    <header id="header">
+    <header>
 	    <div class="d-none d-md-flex justify-content-center align-items-center">
             <input class="buscador" type="text" placeholder="Buscar...">
             <a href="../index.html"><img class="logoDesktop" src="../img/logoDektop.png"></a>
@@ -31,7 +31,7 @@
         </div>
     </header>
     <!-- NAV -->
-    <nav id="nav" class="navbar navbar-expand-md navbar-light">
+    <nav class="navbar-expand-md navbar-light">
         <div class="navMobile">
             <a class="navbar-brand d-md-none" href="../index.html"><img class="logoMobile" src="../img/logoMobileTablet.png"></a>
             <input type="text" placeholder="Buscar..." class="d-md-none">
@@ -60,7 +60,7 @@
         </div>
     </nav>
     <!-- MAIN -->
-    <main id="main">
+    <main>
         <h1>Carrito (0)</h1>
         <!-- FORMULARIO -->
         <div>
@@ -70,7 +70,7 @@
         </div>
     </main>
     <!-- FOOTER -->
-    <footer id="footer">
+    <footer>
         <div>
             <h4>Navegación</h4>
 			<ul>
