--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <!-- HEADER -->
-    <header id="header">
+    <header>
 	    <div class="d-none d-md-flex justify-content-center align-items-center">
             <input class="buscador" type="text" placeholder="Buscar...">
             <a href="../index.html"><img class="logoDesktop" src="../img/logoDektop.png"></a>
@@ -31,7 +31,7 @@
         </div>
     </header>
     <!-- NAV -->
-    <nav id="nav" class="navbar-expand-md navbar-light">
+    <nav class="navbar-expand-md navbar-light">
         <div class="navMobile">
             <a class="navbar-brand d-md-none" href="../index.html"><img class="logoMobile" src="../img/logoMobileTablet.png"></a>
             <input type="text" placeholder="Buscar..." class="d-md-none">
@@ -60,7 +60,7 @@
         </div>
     </nav>
     <!-- MAIN -->
-    <main id="main">
+    <main>
         <h1>Servicios</h1>
         <b>Para realizar un pedido al por mayor o personalizado, por favor contactate con nosotros por email o llená el <a href="contacto.html">"formulario"</a>.</b>
         <!-- Servicios -->
@@ -97,7 +97,7 @@
             </article>
         </section>
     </main>
-    <footer id="footer">
+    <footer>
         <div>
             <h4>Navegación</h4>
 			<ul>
