--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <!-- HEADER -->
-    <header id="header">
+    <header>
 	    <div class="d-none d-md-flex justify-content-center align-items-center">
             <input class="buscador" type="text" placeholder="Buscar...">
             <a href="index.html"><img class="logoDesktop" src="img/logoDektop.png"></a>
@@ -31,10 +31,10 @@
         </div>
     </header>
     <!-- NAV -->
-    <nav id="nav" class="navbar-expand-md navbar-light">
+    <nav class="navbar-expand-md navbar-light">
         <div class="navMobile">
             <a class="navbar-brand d-md-none" href="index.html"><img class="logoMobile" src="img/logoMobileTablet.png"></a>
-            <input type="text" placeholder="Buscar..." class="d-md-none">
+            <input type="text" placeholder="Buscar..." class="buscadorMobile d-md-none">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -59,32 +59,32 @@
             </ul>
         </div>
     </nav>
-    <!-- CARRUSEL -->
-    <div class="container">
-        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="img/banner1.jpg" class="d-block w-100" alt="Froggy reposando en lago">
-                </div>
-                <div class="carousel-item">
-                    <img src="img/banner2.jpg" class="d-block w-100" alt="Froggy reposando en lago">
-                </div>
-                <div class="carousel-item">
-                    <img src="img/banner3.jpg" class="d-block w-100" alt="Froggy reposando en lago">
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
-        </div>
-    </div>
     <!-- MAIN -->
-    <main id="main" class="container">
+    <main>
+        <!-- CARRUSEL -->
+        <div class="container">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="img/banner1.jpg" class="d-block w-100" alt="Froggy reposando en lago">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/banner2.jpg" class="d-block w-100" alt="Froggy reposando en lago">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/banner3.jpg" class="d-block w-100" alt="Froggy reposando en lago">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </div>
         <!-- PRODUCTOS -->
         <h1>Productos destacados</h1>
         <section>
@@ -130,7 +130,7 @@
             </article>
         </section>
     </main>
-    <footer id="footer">
+    <footer>
         <div>
             <h4>Navegación</h4>
 			<ul>
