--- a/pages/FAQS.html
+++ b/pages/FAQS.html
@@ -7,13 +7,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../style/style.css">
     <link rel="icon" href="../img/icon.png">
-    <title>FAQ's (Preguntas frecuentes) - Froggy Store</title>
+    <title>Preguntas frecuentes - Froggy Store</title>
     <meta name="description" content="Froggy Store | Preguntas frecuentes; Hacemos envíos a todo el país a través de OCA. Aceptamos múltiples métodos de pago.">
     <meta name="keywords" content="tienda, store, emprendimiento, cute, tierno, colorido, anime, comics, gaming, videojuegos">
 </head>
 <body>
     <!-- HEADER -->
-    <header id="header">
+    <header>
 	    <div class="d-none d-md-flex justify-content-center align-items-center">
             <input class="buscador" type="text" placeholder="Buscar...">
             <a href="../index.html"><img class="logoDesktop" src="../img/logoDektop.png"></a>
@@ -31,7 +31,7 @@
         </div>
     </header>
     <!-- NAV -->
-    <nav id="nav" class="navbar-expand-md navbar-light">
+    <nav class="navbar-expand-md navbar-light">
         <div class="navMobile">
             <a class="navbar-brand d-md-none" href="../index.html"><img class="logoMobile" src="../img/logoMobileTablet.png"></a>
             <input type="text" placeholder="Buscar..." class="d-md-none">
@@ -60,7 +60,7 @@
         </div>
     </nav>
     <!-- MAIN -->
-    <main id="main">
+    <main>
         <h1>FAQ's</h1>
         <h2>Preguntas frecuentes</h2>
         <!-- FORMULARIO -->
@@ -88,7 +88,7 @@
         </section>
     </main>
     <!-- FOOTER -->
-    <footer id="footer">
+    <footer>
         <div>
             <h4>Navegación</h4>
 			<ul>
