--- a/pages/productos.html
+++ b/pages/productos.html
@@ -13,7 +13,7 @@
 </head>
 <body class="contenedor--productos">
     <!-- HEADER -->
-    <header id="header">
+    <header>
 	    <div class="d-none d-md-flex justify-content-center align-items-center">
             <input class="buscador" type="text" placeholder="Buscar...">
             <a href="../index.html"><img class="logoDesktop" src="../img/logoDektop.png"></a>
@@ -31,7 +31,7 @@
         </div>
     </header>
     <!-- NAV -->
-    <nav id="nav" class="navbar-expand-md navbar-light">
+    <nav class="navbar-expand-md navbar-light">
         <div class="navMobile">
             <a class="navbar-brand d-md-none" href="../index.html"><img class="logoMobile" src="../img/logoMobileTablet.png"></a>
             <input type="text" placeholder="Buscar..." class="d-md-none">
@@ -60,7 +60,7 @@
         </div>
     </nav>
     <!-- MAIN -->
-    <main id="main">
+    <main>
         <!-- PRODUCTOS -->
         <h1>Productos</h1>
         <section>
@@ -186,7 +186,7 @@
             </article>
         </section>
     </main>
-    <aside id="aside">
+    <aside>
         <ul>
             <li><b>Productos</b></li>
             <li>Remeras</li>
@@ -195,7 +195,7 @@
         </ul>
     </aside>
     <!-- FOOTER -->
-    <footer id="footer">
+    <footer>
         <div>
             <h4>Navegación</h4>
 			<ul>
