correción servicios, FAQ, formulario, footer p

--- a/pages/FAQS.html
+++ b/pages/FAQS.html
@@ -63,29 +63,82 @@
     <main>
         <h1>FAQ's</h1>
         <h2>Preguntas frecuentes</h2>
-        <!-- FORMULARIO -->
-        <section>
-            <article>
-                <h4>Froggy Store</h4>
-                <p>Somos un emprendimiento de productos sublimados con dibujos originales! Dibujamos y sublimamos productos con personajes de anime, comics, series y peliculas, cartoons, artistas musicales y todo lo relacionado a lo geek. Si te gustaron nuestros dibujos y querés uno personalizado, por favor leé la sección <a href="servicios">Personalizados</a>.</p>
-            </article>
-            <article>
-                <h4>Tabla de talles</h4>
-                <img class="tablaTalles" src="../img/talles.jpg" alt="Tabla de talles">
-            </article>
-            <article>
-                <h4>Métodos de pago</h4>
-                <p>Aceptamos pagos con: Pago Facil, Rapipago, MercadoPago, tarjetas de débito y crédito y transferencia bancaria.</p>
-            </article>
-            <article>
-                <h4>Envíos</h4>
-                <p>Hacemos envios a todo el país a través de OCA. También pueden retirar los pedidos en nuestro local de Rosario: Bv Oroño 123.</p>
-            </article>
-            <article>
-                <h4>Devoluciones</h4>
-                <p>Aceptamos devoluciones dentro de los primeros 4 días de recibida la compra. Luego de ese periodo, no aceptamos devoluciones.</p>
-            </article>
-        </section>
+        <div class="fila">
+            <div class="columna">
+                <div>
+                    <h3>Froggy Store</h3>
+                    <p>Somos un emprendimiento de productos sublimados con dibujos originales! Dibujamos y sublimamos productos con personajes de anime, comics, series y peliculas, cartoons, artistas musicales y todo lo relacionado a lo geek. Si te gustaron nuestros dibujos y querés uno personalizado, por favor leé la sección <a href="servicios">Personalizados</a>.</p>
+                </div>
+                <div>
+                    <h3>Métodos de pago</h3>
+                    <p>Aceptamos pagos con: Pago Facil, Rapipago, MercadoPago, tarjetas de débito y crédito y transferencia bancaria.</p>
+                </div>
+                <div>
+                    <h3>Envíos</h3>
+                    <p>Hacemos envios a todo el país a través de OCA. También pueden retirar los pedidos en nuestro local de Rosario: Bv Oroño 123.</p>
+                </div>
+                <div>
+                    <h3>Devoluciones</h3>
+                    <p>Aceptamos devoluciones dentro de los primeros 4 días de recibida la compra. Luego de ese periodo, no aceptamos devoluciones.</p>
+                </div>
+            </div>
+            <div class="columna">
+                <div>
+                    <h3>Tabla de talles</h3>
+                    <p>Para tomar las medidas, ubique el centimetro al rededor de la zona a la que desea saber su talle, sin apretar demasiado.</p>
+                    <table>
+                        <tr>
+                            <th>Talle</th>
+                            <th>Busto</th>
+                            <th>Cintura</th>
+                            <th>Cadera</th>
+                        </tr>
+                        <tr>
+                            <td>S</td>
+                            <td>87</td>
+                            <td>77</td>
+                            <td>97</td>
+                        </tr>
+                        <tr>
+                            <td>M</td>
+                            <td>94</td>
+                            <td>84</td>
+                            <td>104</td>
+                        </tr>
+                        <tr>
+                            <td>L</td>
+                            <td>101</td>
+                            <td>91</td>
+                            <td>111</td>
+                        </tr>
+                        <tr>
+                            <td>XL</td>
+                            <td>108</td>
+                            <td>98</td>
+                            <td>118</td>
+                        </tr>
+                        <tr>
+                            <td>XXL</td>
+                            <td>115</td>
+                            <td>105</td>
+                            <td>125</td>
+                        </tr>
+                        <tr>
+                            <td>XXXL</td>
+                            <td>122</td>
+                            <td>112</td>
+                            <td>132</td>
+                        </tr>
+                        <tr>
+                            <td>XXXXL</td>
+                            <td>129</td>
+                            <td>119</td>
+                            <td>139</td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+        </div>
     </main>
     <!-- FOOTER -->
     <footer>
