--- a/pages/iniciar_sesion.html
+++ b/pages/iniciar_sesion.html
@@ -63,20 +63,18 @@
     <main id="main">
         <h1>Iniciar sesión</h1>
         <!-- FORMULARIO -->
-        <div>
-            <form action="#" method="post">
-                <label for="Email">Email:</label>
-                <br>
-                <input type="email" placeholder="Email" id="Email">
-                <br>
+        <form action="#" method="post">
+            <div>
+                <label for="Email">Email</label>
+                <input type="email" id="Email">
+            </div>
+            <div>
                 <label for="Contraseña">Contraseña</label>
-                <br>
-                <input type="password" placeholder="Contraseña" id="Contraseña">
-                <br>
-                <input type="submit">
-            </form>
-            <p>No tenés cuenta? <a href="#">Crea una</a></p> 
-        </div>
+                <input type="password" id="Contraseña">
+            </div>
+            <input type="submit">
+        </form>
+        <p>No tenés cuenta? <a href="#">Crea una</a></p> 
     </main>
     <!-- FOOTER -->
     <footer id="footer">
