--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -62,29 +62,44 @@
     <!-- MAIN -->
     <main>
         <h1>Servicios</h1>
-        <b>Para realizar un pedido al por mayor o personalizado, por favor contactate con nosotros por email o llená el <a href="contacto.html">"formulario"</a>.</b>
+        <b>Para realizar un pedido al por mayor o personalizado, por favor contactate con nosotros por email o llená el <a href="contacto.html">formulario</a>.</b>
         <!-- Servicios -->
-        <section>
-            <article>
-                <h2>Venta al por mayor</h2>
-                <h4>-30% descuento</h4>
-                <p>Ofrecemos la venta de productos al por mayor. Pueden ser productos de nuestro catálogo o productos personalizados!</p>
-            </article>
-            <article>
-                <div>
-                    <h2>Personalizados</h2>
-                    <h4>+20% recargo</h4>
-                    <p>Ofrecemos el servicio de productos personalizados! Son remeras, tazas y/o llaveros con <b>un dibujo hecho para vos!</b> Tendrá el estilo de Froggy Store. Podés pedirnos un dibujo de lo que quieras:</p>
-                    <ul>
-                        <li>Una o más personas</li>
-                        <li>Tu mascota</li>
-                        <li>Tu personaje favorito</li>
-                        <li>Tu planta favorita</li>
-                        <li>Un paisaje simple</li>
-                    </ul>
-                    <b>NO hacemos ilustraciones con contenido inapropiado ( +18 )</b>
+        <div>
+            <h2>Venta al por mayor</h2>
+            <h4>-30% descuento</h4>
+            <p>Ofrecemos la venta de productos al por mayor. Pueden ser productos de nuestro catálogo o productos personalizados! Como máximo, puede pedir 15 items del mismo producto. Ej: sólo 15 remeras con ilustración de Froggy.</p>
+        </div>
+        <hr>
+        <div>
+            <h2>Productos personalizados</h2>
+            <h4>+20% recargo</h4>
+            <p>Son son productos con dibujos hecho a medida para vos! Podés pedirnos un dibujo de lo que quieras :) tendrán el estilo de Froggy Store (tierno y colorido).</p>
+            <div class="fila">
+                <div class="columna">
+                    <table>
+                        <tr>
+                            <th>Hacemos ilustraciones de</th>
+                        </tr>
+                        <tr>
+                            <td>Personas reales</td>
+                        </tr>
+                        <tr>
+                            <td>Personajes de series o videojuegos</td>
+                        </tr>
+                        <tr>
+                            <td>Animales</td>
+                        </tr>
+                        <tr>
+                            <td>Plantas</td>
+                        </tr>
+                        <tr>
+                            <td>Paisajes simples</td>
+                        </tr>
+                    </table>
+                    <br>
+                    <p>NO hacemos ilustraciones con contenido inapropiado ( +18 )</p>
                 </div>
-                <div>
+                <div class="columna">
                     <h3>Proceso del pedido personalizado</h3>
                     <ol>
                         <li><b>Consultanos por mensaje:</b> escribinos un correo o llená el <a href="contacto.html">formulario</a> con tu idea. Nosotros nos comunicaremos con vos para avisarte si es posible hacer tu idea! Tené en cuenta que si necesitas tu pedido para una fecha en especial, pedir con un anticipado de 1 mes para más seguridad.</li>
@@ -94,8 +109,8 @@
                         <li><b>Producto listo:</b> tu producto estará listo con tu dibujo hecho a medida para vos! En este punto, tendrás que pagarnos el 50% restante.</li>
                     </ol> 
                 </div>
-            </article>
-        </section>
+            </div>
+        </div>
     </main>
     <footer>
         <div>
