--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -63,8 +63,8 @@
     <main>
         <h1>Contacto</h1>
         <!-- INFO CONTACTO -->
-        <section class="contenedor--contacto">
-            <article>
+        <div class="fila">
+            <div class="columna">
                 <h2>Información de contacto</h2>
                 <ul>
                     <li><a href="https://api.whatsapp.com/send?phone=#" target="_blank">
@@ -85,11 +85,10 @@
                     </li>
                 </ul>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3348.681547567435!2d-60.65248604949048!3d-32.93301098083163!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b7ab3635f668a5%3A0xb4a7150b5cfb740e!2sBv.%20Oro%C3%B1o%20123%2C%20S2000DRB%20Rosario%2C%20Santa%20Fe!5e0!3m2!1ses!2sar!4v1649079663181!5m2!1ses!2sar" width="500" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </article>
-            <!-- FORMULARIO -->
-            <article>
+            </div>
+            <div class="columna">
                 <h2>Dejanos tu pedido y/o consulta :)</h2>
-                <form action="#" method="post" class="formulario">
+                <form action="#" method="post">
                     <div>
                         <label for="nombre">Nombre</label>
                         <input type="name" id="nombre">
@@ -106,12 +105,10 @@
                         <label for="mensaje">Tu mensaje...</label>
                         <textarea name="mensaje" id="mensaje" cols="35" rows="4"></textarea>
                     </div>
-                    <div>
-                        <input type="submit" value="Enviar" class="botonEnviar">
-                    </div>
+                    <input type="submit" value="Enviar" class="botonEnviar">
                 </form>
-            </article>
-        </section>
+            </div>
+        </div>
     </main>
     <!-- FOOTER -->
     <footer>
