nav rosa y verticalLine

--- a/pages/FAQS.html
+++ b/pages/FAQS.html
@@ -34,7 +34,7 @@
         </div>
     </header>
     <!-- NAV -->
-    <nav class="navbar-expand-md navbar-light">
+    <nav class="navbar-expand-md navbar-dark">
         <div class="navMobile">
             <a class="navbar-brand d-md-none" href="../index.html"><img class="logoMobile" src="../img/logoMobileTablet.png"></a>
             <input type="text" placeholder="Buscar..." class="d-md-none">
@@ -85,6 +85,7 @@
                     <p>Aceptamos devoluciones dentro de los primeros 4 días de recibida la compra. Luego de ese periodo, no aceptamos devoluciones.</p>
                 </div>
             </div>
+            <div class="verticalLine"></div>
             <div class="columna">
                 <div>
                     <h3>Tabla de talles</h3>
