--- a/pages/iniciar_sesion.html
+++ b/pages/iniciar_sesion.html
@@ -34,7 +34,7 @@
         </div>
     </header>
     <!-- NAV -->
-    <nav id="nav" class="navbar-expand-md navbar-light">
+    <nav id="nav" class="navbar-expand-md navbar-dark">
         <div class="navMobile">
             <a class="navbar-brand d-md-none" href="../index.html"><img class="logoMobile" src="../img/logoMobileTablet.png"></a>
             <input type="text" placeholder="Buscar..." class="d-md-none">
