--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -34,7 +34,7 @@
         </div>
     </header>
     <!-- NAV -->
-    <nav class="navbar-expand-md navbar-light">
+    <nav class="navbar-expand-md navbar-dark">
         <div class="navMobile">
             <a class="navbar-brand d-md-none" href="../index.html"><img class="logoMobile" src="../img/logoMobileTablet.png"></a>
             <input type="text" placeholder="Buscar..." class="d-md-none">
@@ -72,7 +72,6 @@
             <h4>-30% descuento</h4>
             <p>Ofrecemos la venta de productos al por mayor. Pueden ser productos de nuestro catálogo o productos personalizados! Como máximo, puede pedir 15 items del mismo producto. Ej: sólo 15 remeras con ilustración de Froggy.</p>
         </div>
-        <hr>
         <div>
             <div class="cajaSuperior">
                 <h2>Productos personalizados</h2>
@@ -104,6 +103,7 @@
                     <br>
                     <p>NO hacemos ilustraciones con contenido inapropiado ( +18 )</p>
                 </div>
+                <div class="verticalLine"></div>
                 <div class="columna">
                     <h3>Proceso del pedido personalizado</h3>
                     <ol>
