--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style/style.css">
     <link rel="icon" href="img/icon.png">
     <title>Froggy Store - Productos cute & geek</title>
-    <meta name="description" content="Froggy Store | Emprendimiento de productos lindos y coloridos de series anime, videojuegos y/o cartoon, con dibujos originales hechos por nosotros!">
+    <meta name="description" content="Froggy Store | Emprendimiento de productos geek con estética cute y colorida con dibujos originales hechos por nosotros!">
     <meta name="keywords" content="tienda, store, emprendimiento, tierno, cute, geek, anime, manga">
 </head>
 <body>
@@ -20,7 +20,7 @@
             <div>
                 <!-- LOGIN -->
                 <a href="pages/iniciar_sesion.html">
-                    <svg id="iconosBoostrap" xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
                         <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z"/>
                     </svg>  
                 </a>
@@ -33,8 +33,8 @@
         </div>
     </header>
     <!-- NAV -->
-    <nav class="navbar-expand-md navbar-light">
-        <div class="d-flex justify-content-around  align-items-center">
+    <nav class="navbar-expand-md navbar-dark">
+        <div>
             <a class="navbar-brand d-md-none" href="index.html"><img class="logoMobile" src="img/logoMobileTablet.png"></a>
             <input type="text" placeholder="Buscar..." class="d-md-none">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
