--- a/pages/404error.html
+++ b/pages/404error.html
@@ -12,7 +12,7 @@
         <meta name="keywords" content="tienda, store, emprendimiento, Rosario, dibujo, ilustraciones, cute, tierno, colorido, anime, comics, gaming, videojuegos">
     </head>
     <body>
-        <main>
+        <main class="404 error">
             <h1>404 :(</h1>
             <h2>Esta página no está disponible. Disculpa las molestias.</h2>
             <button><a href="../index.html">Inicio</a></button>
