--- a/pages/productos.html
+++ b/pages/productos.html
@@ -9,24 +9,23 @@
     <link rel="icon" href="../img/icon.png">
     <title>Productos - Froggy Store</title>
     <meta name="description" content="Froggy Store | Productos de temática anime, comics, cartoon y videojuegos.">
-    <meta name="keywords" content="tierno, cute, geek, anime, manga, pokemon, yokai watch">
+    <meta name="keywords" content="tienda, store, emprendimiento, shopping, clothing, ropa, clothes, comprar, cute, tierno, colorido, anime, comics, gaming, videojuegos, geek, manga, pokemon, yokai watch">
 </head>
 <body class="contenedor--productos">
     <!-- HEADER -->
     <header>
-	    <div class="d-none d-md-flex justify-content-evenly align-items-center">
+	    <div class="d-none d-sm-flex justify-content-evenly align-items-center">
             <input class="buscador" type="text" placeholder="Buscar...">
-            <a href="../index.html"><img class="logoDesktop" src="../img/logoDektop.png"></a>
+            <a href="../index.html"><img class="logoDesktop" src="../img/logoDektop.png" alt="logo de Froggy Store para desktop"></a>
             <div>
                 <!-- LOGIN -->
                 <a href="iniciar_sesion.html">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16" alt="logo Iniciar sesión">
                         <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z"/>
                     </svg>  
                 </a>
-                <!-- CARRITO -->
-                <a href="carrito.html">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-bag" viewBox="0 0 16 16">
+                <a href="carrito.html">    <!-- CARRITO -->
+                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-bag" viewBox="0 0 16 16" alt="logo carrito de compras">
                         <path d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1zm3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4h-3.5zM2 5h12v9a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V5z"/>
                     </svg>
                 </a>  
@@ -34,10 +33,10 @@
         </div>
     </header>
     <!-- NAV -->
-    <nav class="navbar-expand-md navbar-dark">
-        <div class="navMobile">
-            <a class="navbar-brand d-md-none" href="../index.html"><img class="logoMobile" src="../img/logoMobileTablet.png"></a>
-            <input type="text" placeholder="Buscar..." class="d-md-none">
+    <nav class="navbar-expand-sm navbar-dark">
+        <div>
+            <a class="navbar-brand d-sm-none" href="../index.html"><img class="logoMobile" src="../img/logoMobileTablet.png" alt="logo de Froggy Store para mobile y tablet"></a>
+            <input type="text" placeholder="Buscar..." class="d-sm-none">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -215,7 +214,7 @@
 				<li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16" alt="Whatsapp">
                     <path d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z"/></svg>
                     +54 341 1234567</li>
-				<li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-fill" viewBox="0 0 16 16">
+				<li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-fill" viewBox="0 0 16 16" alt="Email">
                     <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555ZM0 4.697v7.104l5.803-3.558L0 4.697ZM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757Zm3.436-.586L16 11.801V4.697l-5.803 3.546Z"/></svg>
                     froggystore@gmail.com</li>
 				<li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16" alt="Dirección">
